deploy: fe3243e2a87cd67cd17c855927f55ceaa5641d7b

--- a/search/index.html
+++ b/search/index.html
@@ -27,7 +27,7 @@
                             <div class="meta">
                                 <div class="info">
                                     <span class="field">
-                                        <i class="ri-map-pin-time-line"></i>
+                                        <i class="ri-time-line"></i>
                                         <span class="date">${e.item.date}</span>
                                     </span>
                                     ${n}
@@ -36,4 +36,7 @@
                         </div>
                     </div>
                 `}).join("");return t+`<div class="pagination"></div>`}</script><footer class=footer><div class=powered_by><a href=https://varkai.com>Designed by VarKai,</a>
-<a href=http://www.gohugo.io/>Proudly published with Hugo</a></div><div class=footer_slogan><span>轻作、重拾写作的乐趣</span></div></footer><script src=https://cdnjs.cloudflare.com/ajax/libs/elevator.js/1.0.1/elevator.min.js></script><script src=/js/graphite.min.js></script></body></html>
+<a href=http://www.gohugo.io/>Proudly published with Hugo</a></div><div class=statistics><i class=ri-article-line></i>
+<span id=busuanzi_container_page_pv><span id=busuanzi_value_page_pv></span>
+</span><i class=ri-bar-chart-box-line></i>
+<span id=busuanzi_container_site_pv><span id=busuanzi_value_site_pv></span></span></div><div class=footer_slogan><span>轻作 | 重拾写作的乐趣</span></div></footer><script src=https://cdnjs.cloudflare.com/ajax/libs/elevator.js/1.0.1/elevator.min.js></script><script src=/js/graphite.min.js></script><script src=https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script></body></html>
