deploy: 8cec5dd042540788d0090717199525c2ee538c67

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,4 @@
-<!doctype html><html lang=zh-cn><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=author content="QCute"><title>关于 ｜ 轻作</title>
-<meta name=description content="最初在CSDN
+<!doctype html><html lang=zh-cn><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=author content="QCute"><title>关于 ｜ 轻作</title><meta name=description content="最初在CSDN
 迁移到简书
 然后到掘金
 最后用Github
